Fri May 20 22:17:29 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * bin/MakeProjectCreator/config/ace_qt4reactor.mpb:

          Assignment to "after" must match the target MPC project name.

Thu May 12 18:08:47 UTC 2011  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/wrapper_macros.GNU: Added command settings for
          preprocessing C and C++ source files.

        * include/makeinclude/rules.local.GNU: Added rules to preprocess
          C and C++ files when directed.

          These allow one to now quickly produce a preprocessed version of
          a source file. Ala... make -f GNUmakefile.ACE ACE.i
          would preprocess ACE.cpp and put the result in ACE.i.

Thu May 12 01:04:19 UTC 2011   Chad Beaulac  <chad.beaulac@objectivesolutions.com>
        * tests/Bug_3912_Regression_Test.cpp:
          Integrated changes from Phil Mesnier.
          Added static_cast and const_cast instead of C-style casts.

Wed May 11 18:26:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Thread_Control.h:
        * ace/Thread_Control.cpp:
        * ace/Thread_Hook.h:
        * ace/Thread_Hook.cpp:
        * apps/gperf/src/Options.cpp:
          Doxygen changes

Wed May 11 13:41:28 UTC 2011  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * ace/QtReactor/QtReactor.h:
          Changed for QT4 deprecated include QT/..

Wed May 11 12:45:21 UTC 2011  Chad Beaulac  <chad.beaulac@objectivesolutions.com>

        * tests/Bug_3912_Regression_Test.cpp:
          Returning a value from close now.

        * tests/tests.mpc:
          Removed libs Stream_Config_Stream_DLL.
          It's dynamically loaded by the ASR.

Tue May 10 11:59:32 UTC 2011  Chad Beaulac  <chad.beaulac@objectivesolutions.com>

        * ace/Stream.cpp:
        * tests/Bug_3912_Regression_Test.cpp:
        * tests/Bug_3912_Regression_Test.conf:
          Fixed FUZZ whitespace and Id

Mon May  9 19:09:35 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
